--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "asa-market",
+  "name": "ekomart-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^7.1.0",
-    "lucide-react": "^0.555.0",
-    "next": "16.0.7",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
+    "apexcharts": "^4.7.0",
+    "bootstrap": "^5.3.5",
+    "next": "15.3.1",
+    "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.9",
+    "react-countup": "^6.5.3",
+    "react-data-table-component": "^7.7.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@prisma/client": "^5.14.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.7",
-    "prisma": "^7.1.0",
+    "prisma": "^5.14.0",
     "typescript": "^5"
   }
 }
